--- a/PAGINA-PRINCIPAL-INICIO/style.css
+++ b/PAGINA-PRINCIPAL-INICIO/style.css
@@ -1,3 +1,10 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   max-width: 100%;
@@ -61,7 +68,6 @@ body {
 .item2 {
   grid-row: 1/3;
   border-radius: 10px;
-  text-decoration: none;
 }
 
 .item2 img {
@@ -70,9 +76,18 @@ body {
   width: 300px;
 }
 
+.item2 a {
+  text-decoration: none;
+}
+
 .item2 p,
 h2 {
   color: black;
+}
+
+.item2 p {
+  display: flex;
+  align-items: center center;
 }
 
 .item2:hover {
@@ -117,6 +132,10 @@ h2 {
   list-style: none;
   text-decoration: none;
   font-size: 25px;
+}
+
+.menu-lateral a {
+  text-decoration: none;
 }
 
 .menu-lateral li {
