render subido y actualizado en la pagina, y enlaces modificado para que en nelify se pueda ver

--- a/CONTACTO/CONTACTO-ROGERIO/style-rogerio.css
+++ b/CONTACTO/CONTACTO-ROGERIO/style-rogerio.css
@@ -5,6 +5,14 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+    background: rgb(255, 154, 0);
+    background: linear-gradient(319deg, rgba(255, 154, 0, 0.7483368347338936) 23%, rgba(240, 46, 46, 0.48503151260504207) 58%);
+
+}
+
+
+
 .container-form {
     width: 100%;
     max-width: 1100px;
@@ -102,4 +110,18 @@ textarea {
 .top-nav a.active {
     background-color: whitesmoke;
     color: white;
+}
+
+.top-nav img {
+    padding: 5px;
+    width: 800px;
+    margin-top: 10px;
+}
+
+.buscador-google {
+    float: right;
+    text-align: center center;
+    padding: 40px 20px;
+    text-decoration: none;
+    color: rgb(206, 206, 206);
 }
