--- a/FORUM/REGISTER/styles.css
+++ b/FORUM/REGISTER/styles.css
@@ -1,12 +1,6 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
 body {
-    background-color: grey;
+    background: rgb(255, 154, 0);
+    background: linear-gradient(145deg, rgba(255, 154, 0, 0.7483368347338936) 23%, rgba(240, 46, 46, 0.48503151260504207) 78%);
 }
 
 .grid-container {
@@ -18,6 +12,8 @@ body {
     padding: 10px;
     width: 500px;
     align-items: start;
+    align-items: center;
+
 }
 
 .grid-container>div {
@@ -29,4 +25,10 @@ body {
 
 .grid-container {
     grid-area: b;
+}
+
+.tarjeta-central {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
